samples/bookinfo/networking/virtualservice-tyk.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tyk-bus-reviews
spec:
  hosts:
  - reviews
  http:
  - match:
    - sourceLabels:
        app: gateway-svc-tyk-hybrid
    route: 
    - destination:
        host: reviews
  - route:
    - destination:
        host: gateway-svc-tyk-hybrid
